2008-10-05  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (deserialize): Don't pass NULL as the iter
	parameter to gtk_list_store_insert_with_values.
	(search_text_save): Likewise.

2008-10-05  Neal H. Walfield  <neal@gnu.org>

	* src/player.c (player_set_source): Remove debugging output.

2008-10-05  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (search_text_save): Move search to the search of
	the list.

2008-10-05  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (fs_scanner_thread): Detect files by the presense
	of a leading /, not a "file://" prefix.
	(music_db_add): Likewise.
	(music_db_add_file_internal): Don't add a "file://" prefix.
	* src/player.c: Include <obstack.h>.
	(obstack_chunk_alloc): Define.
	(obstack_chunk_free): Likewise.
	(player_set_source): If the leading character is a '/', assume it
	is a file name and create a URI out of it.
	* configure.ac: Check for the availability of g_uri_escape_string.

2008-10-05  Neal H. Walfield  <neal@gnu.org>

	* src/caption.c (build): Fix negative conditional.

	* src/starling.c (deserialize): Add some default searches.

	(change_caption_format): Don't add the current format twice.

	(set_position_text): Use a local variable for the buffer.

	(position_update): Return if PLAYER_QUERY_POSITION returns false.

2008-10-03  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (play_list_combo_refresh): Call
	play_list_combo_changed before unblocking the signal handler if
	SAVE_OLD_CONFIG is false.

2008-10-03  Neal H. Walfield  <neal@gnu.org>

	* src/caption.c (struct chunk): Add fields cond_true, cond_false
	and bytes.
	(caption_create): Break the VM construction out of this function...
	(build): ... and put it in this new function.  Add support for
	conditionals, URL and left ellipsizing.
	(caption_render): Break the rendering out of this function...
	(render): ... and put it in this new function.  Add support for
	conditionals, URL and left ellipsizing.